--- a/desktop-app/src/main/resources/Layouts/GeneratorView.fxml
+++ b/desktop-app/src/main/resources/Layouts/GeneratorView.fxml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="CENTER" maxHeight="Infinity" maxWidth="Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.Implementations.GeneratorViewImpl">
+<GridPane alignment="CENTER" maxHeight="Infinity" maxWidth="Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../stylesheets/generatorViewStyle.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.Implementations.GeneratorViewImpl">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" prefWidth="250.0" />
         <ColumnConstraints hgrow="SOMETIMES" prefWidth="100.0" />
@@ -52,12 +50,12 @@
                 </ImageView>
             </children>
         </GridPane>
-      <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: limegreen;" text="+" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="2">
+      <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: limegreen;" styleClass="plus" text="+" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <GridPane.margin>
             <Insets left="24.0" />
          </GridPane.margin>
          <padding>
-            <Insets left="5.0" right="5.0" />
+            <Insets bottom="3.0" left="5.0" right="5.0" />
          </padding>
          <font>
             <Font size="30.0" />
@@ -80,20 +78,23 @@
                <GridPane.margin>
                   <Insets left="25.0" top="30.0" />
                </GridPane.margin></ImageView>
-                    <Button fx:id="leftStyleImage" minHeight="25.0" minWidth="25.0" onAction="#onShiftLeftStyleImage" prefHeight="25.0" prefWidth="25.0" text="&lt;" GridPane.columnIndex="0" GridPane.rowIndex="1">
+                    <Button fx:id="leftStyleImage" minHeight="25.0" minWidth="25.0" onAction="#onShiftLeftStyleImage" prefHeight="25.0" prefWidth="25.0" styleClass="shift-button" text="&lt;" GridPane.columnIndex="0" GridPane.rowIndex="1">
                         <GridPane.margin>
                             <Insets left="25.0" top="20.0" />
                         </GridPane.margin></Button>
-                    <Button fx:id="rightStyleImage" alignment="TOP_CENTER" contentDisplay="CENTER" minHeight="25.0" minWidth="25.0" onAction="#onShiftRightStyleImage" prefHeight="25.0" prefWidth="25.0" text="&gt;" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                    <Button fx:id="rightStyleImage" alignment="TOP_CENTER" contentDisplay="CENTER" minHeight="25.0" minWidth="25.0" onAction="#onShiftRightStyleImage" prefHeight="25.0" prefWidth="25.0" styleClass="shift-button" text="&gt;" GridPane.columnIndex="1" GridPane.rowIndex="1">
                         <GridPane.margin>
                             <Insets left="75.0" top="20.0" />
-                        </GridPane.margin></Button>
+                        </GridPane.margin>
+               <padding>
+                  <Insets top="5.0" />
+               </padding></Button>
                 </children>
             </GridPane>
 
       <VBox alignment="TOP_CENTER" prefHeight="140.0" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.rowIndex="3">
           <children>
-              <TextField fx:id="photoName" alignment="TOP_CENTER" maxWidth="150.0" prefWidth="150.0" promptText="Name a photo">
+              <TextField fx:id="photoName" alignment="TOP_CENTER" maxWidth="150.0" prefWidth="150.0" promptText="Name a photo" styleClass="photo-name">
                   <font>
                       <Font size="14.0" />
                   </font>
@@ -104,7 +105,7 @@
                       <Insets top="15.0" />
                   </VBox.margin>
               </TextField>
-              <Button fx:id="generateButton" alignment="CENTER" mnemonicParsing="false" onAction="#onGenerate" text="GENERATE">
+              <Button fx:id="generateButton" alignment="CENTER" mnemonicParsing="false" onAction="#onGenerate" styleClass="gen-button" text="GENERATE">
                   <VBox.margin>
                       <Insets top="5.0" />
                   </VBox.margin>
